se añad modelo secuencial para liquidar y listar (interfaz)